k8s/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fast-food-api-ingress
  namespace: fast-food-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: fast-food-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fast-food-api-service
                port:
                  number: 80
